--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ Class - .
       float: left;
     }
   }
-.button {
+/*.button {
     background-color: white;
     border: none;
     color: black;
@@ -44,4 +44,4 @@ Class - .
     display:block;
     font-size: 16px;
   }
-      
+      */
