--- a/style.css
+++ b/style.css
@@ -45,3 +45,23 @@ Class - .
     font-size: 16px;
   }
       */
+
+.flex-container {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    
+  }
+  
+  .flex-item {
+    display: block;
+    width: 80%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid yellow;
+  }
+  
