--- a/style.css
+++ b/style.css
@@ -9,42 +9,52 @@ Class - .
     color:grey;
     font-size: 65px;
 }
-
+/*
 #belowheading{
     text-align: center;
-    color:grey;
+    color:white;
     background-color: lightgrey;
     font-size: 15px;
     word-spacing: 5px;
     height: 30px;
-}
-.back{
-    background-color: black;
-}
+}*/
 .content{
     position: absolute;
     text-align: left;
     
 }
 @media (max-width: 920px) {
-    .split {
-      flex: 1 100%;
-      height: auto;
-      font-size: 15px;
-      float: left;
-    }
+    .flex-item {
+        display: block;
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top:auto;
+        border: 2px solid yellow;
+      }
   }
-/*.button {
-    background-color: white;
+.button {
+    color:black;
+    background-color: black;
     border: none;
-    color: black;
+    color:black;
     text-align: left;
     padding: 15px 100%;
     text-decoration: none;
     display:block;
     font-size: 16px;
   }
-      */
+  .button {
+    background-color: gray;
+    border: none;
+    color: black;
+    padding: 15px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+  }     
 
 .flex-container {
     position: absolute;
@@ -56,12 +66,5 @@ Class - .
     
   }
   
-  .flex-item {
-    display: block;
-    width: 80%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid yellow;
-  }
+
   
