--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ button:hover{
     background-color:pink;
   }
 .flex-container {
-    position: absolute;
+    position: relative;
     left: 20px;
     right: 20px;
     display: flex;
