--- a/index.css
+++ b/index.css
@@ -69,8 +69,8 @@ button:hover{
 }
 .world-tour-img{
   display: block;
-  width: 50%;
-  height: auto;
+  width: 10%;
+  height: 50px;
   margin-left: 100px;
   margin-right: auto;
   border: 2px solid yellowgreen;
