updated link to tour

--- a/index.css
+++ b/index.css
@@ -76,3 +76,9 @@ button:hover{
   margin-top:auto;
   border: 2px solid yellow;
 }
+/*format tour text*/
+.tour{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: medium;
+  color:pink;
+}
