--- a/index.css
+++ b/index.css
@@ -78,7 +78,11 @@ button:hover{
 }
 /*format tour text*/
 .tour{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: medium;
-  color:pink;
+  font-family: 'Anek Devanagari', sans-serif;  font-size: medium;
+  color:gray;
+}
+
+.subheading{
+  text-align: center;
+  font-size: 30px;
 }
