--- a/index.css
+++ b/index.css
@@ -7,12 +7,7 @@ Class - .
     text-align:center;
     position:relative;
     color:grey;
-    font-size: 65px;
-}
-/* for headings at the top of the page*/
-.headings{
-  text-align: left;
-  font-family: 'Nerko One', cursive;
+    font-size: 30px;
 }
 
 /* for styling of buttons */
@@ -36,6 +31,52 @@ Class - .
 button:hover{
     background-color:pink;
   }
+.ticketbutton{
+  background-color: none;
+  border: 2px;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  width: 19%;
+  cursor: pointer;
+}
+.menubtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.menudown {
+  position: relative;
+  display: inline-block;
+}
+
+.menu-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.menu-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+  
+  .menu-content a:hover {background-color: #ddd;}
+  
+  .menu:hover .menu-content {display: block;}
+  
+  .menu:hover .menubtn {background-color: #3e8e41;}
 
   /* @media (max-width: 920px) {
     .flex-item {
@@ -72,7 +113,7 @@ button:hover{
   width: 400px;
   height: 300px;
   margin-left: 100px;
-  padding:8px;
+  padding:1px;
   margin-top:auto;
   border: 2px solid yellow;
   float:left;
@@ -90,4 +131,5 @@ button:hover{
 
 .toursection{
   float:right;
+  margin-right:150px;
 }
