--- a/index.css
+++ b/index.css
@@ -46,9 +46,11 @@ button:hover{
 .menubtn {
   background-color: #04AA6D;
   color: white;
-  padding: 16px;
+  padding: 10px;
   font-size: 16px;
   border: none;
+  width:100px;
+  float: left;
 }
 
 .menudown {
