--- a/ticket.css
+++ b/ticket.css
@@ -31,7 +31,7 @@ background-color: gray;
 button:hover{
   background-color:pink;
 }
-.ticketbutton{
+/* .ticketbutton{
 background-color: none;
 border: 2px;
 color: black;
@@ -42,8 +42,10 @@ display: inline-block;
 font-size: 18px;
 width: 19%;
 cursor: pointer;
-}
-.menubtn {
+} */
+
+/* for tickets categorised by country/state */
+.countrybtn {
 background-color: #04AA6D;
 color: white;
 padding: 10px;
@@ -53,12 +55,12 @@ width:100px;
 float: left;
 }
 
-.menudown {
+.countrydown {
 position: relative;
 display: inline-block;
 }
 
-.menu-content {
+.country-content {
 display: none;
 position: absolute;
 background-color: #f1f1f1;
@@ -67,18 +69,19 @@ box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 z-index: 1;
 }
 
-.menu-content a {
+.country-content a {
 color: black;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
 
-.menu-content a:hover {background-color: #ddd;}
+.country-content a:hover {background-color: #ddd;}
 
-.menu:hover .menu-content {display: block;}
+.country:hover .country-content {display: block;}
 
-.menu:hover .menubtn {background-color: #3e8e41;}
+.country:hover .countrybtn {background-color: #3e8e41;}
+
 
 /* @media (max-width: 920px) {
   .flex-item {
@@ -100,15 +103,6 @@ display: block;
   flex-direction: row-reverse;
 }   */
 
-.bc-img{
-display: block;
-width: 80%;
-height: auto;
-margin-left: auto;
-margin-right: auto;
-margin-top:auto;
-border: 2px solid yellow;
-}
 
 .wt-img{
 display: block;
@@ -117,7 +111,7 @@ height: 300px;
 margin-left: 100px;
 padding:1px;
 margin-top:auto;
-border: 2px solid yellow;
+border: 2px solid orange;
 float:left;
 }
 /*format tour text*/
