--- a/about.css
+++ b/about.css
@@ -31,55 +31,7 @@ background-color: gray;
 button:hover{
   background-color:pink;
 }
-.ticketbutton{
-background-color: none;
-border: 2px;
-color: black;
-padding: 20px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 18px;
-width: 19%;
-cursor: pointer;
-}
-.menubtn {
-background-color: #04AA6D;
-color: white;
-padding: 10px;
-font-size: 16px;
-border: none;
-width:100px;
-float: left;
-}
 
-.menudown {
-position: relative;
-display: inline-block;
-}
-
-.menu-content {
-display: none;
-position: absolute;
-background-color: #f1f1f1;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-z-index: 1;
-}
-
-.menu-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
-}
-@media (max-width: 920px) {
-.menu-content a:hover {background-color: #ddd;}
-
-.menu:hover .menu-content {display: block;}
-
-.menu:hover .menubtn {background-color: #3e8e41;}
-}
 /* @media (max-width: 920px) {
   .flex-item {
       display: block;
@@ -100,7 +52,7 @@ display: block;
   flex-direction: row-reverse;
 }   */
 
-.bc-img{
+.members-img{
 display: block;
 width: 80%;
 height: auto;
@@ -110,28 +62,21 @@ margin-top:auto;
 border: 2px solid orange;
 }
 
-.wt-img{
+.logo-img{
 display: block;
-width: 400px;
-height: 300px;
+width: 45px;
+height: 40px;
 margin-left: 100px;
 padding:1px;
 margin-top:auto;
 border: 2px solid orange;
 float:left;
 }
-/*format tour text*/
-.tour{
-font-family: 'Anek Devanagari', sans-serif;  font-size: medium;
-color:gray;
-}
 
 .subheading{
 text-align: center;
 font-size: 30px;
 }
-
-.toursection{
-float:right;
-margin-right:150px;
+h1{
+  background-image:"/Photos/M5_logo.jpg";
 }
