updated css styling and members information

--- a/about.css
+++ b/about.css
@@ -52,30 +52,29 @@ button:hover{
   flex-direction: row-reverse;
 }   */
 
-.members-img{
+.members-img1{
 display: block;
-width: 80%;
-height: auto;
+width: auto;
+height: 300px;
 margin-left: auto;
 margin-right: auto;
-margin-top:auto;
+margin-top:20px;
 border: 2px solid orange;
 }
-
-.logo-img{
-display: block;
-width: 45px;
-height: 40px;
-margin-left: 100px;
-padding:1px;
-margin-top:auto;
-border: 2px solid orange;
-float:left;
-}
+.members-img2{
+  display: block;
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:20px;
+  border: 2px solid orange;
+  }
 
 .subheading{
   text-align: center;
   font-size: 30px;
+  font-family: 'Inconsolata', monospace;
 }
 .description{
   text-align: left;
@@ -83,11 +82,19 @@ float:left;
 }
 .membersheadings{
   font-size: 50px;
-  font-family: 'Anek Devanagari', sans-serif;  font-size: medium;
-
+  font-family: 'Inconsolata', monospace;
 }
 .membersproperties{
+  display: inline-block;
   font-size: 30px;
-  font-family: 'Anek Devanagari', sans-serif;  font-size: medium;
+  font-family: 'Inconsolata', monospace;
+}
+.alignment{
+  align-items: center;
+  text-align: center;
+}
 
+.instagram{
+  width:52px;
+  height:42px;
 }
