--- a/index.css
+++ b/index.css
@@ -118,6 +118,7 @@ button:hover{
 .subheading{
   text-align: center;
   font-size: 30px;
+  font-family: 'Inconsolata', monospace;
 }
 
 .toursection{
