--- a/about.css
+++ b/about.css
@@ -111,4 +111,15 @@ border: 2px solid orange;
 }
 .socialmedia{
   font-size: 15px;
+  height:30px;
+  width:auto;
+  margin:20px;
+  display:inline;
+}
+
+.sm{
+  text-align: left;
+  margin-left:20px;
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
 }
