--- a/index.css
+++ b/index.css
@@ -109,11 +109,6 @@ button:hover{
   border: 2px solid orange;
   float:left;
 }
-/*format tour text*/
-.tour{
-  font-family: 'Anek Devanagari', sans-serif;  font-size: medium;
-  color:gray;
-}
 
 .subheading{
   text-align: center;
@@ -121,7 +116,17 @@ button:hover{
   font-family: 'Inconsolata', monospace;
 }
 
-.toursection{
-  float:right;
-  margin-right:150px;
+.socialmedia{
+  font-size: 15px;
+  height:30px;
+  width:auto;
+  margin:20px;
+  display:inline;
+}
+
+.sm{
+  text-align: left;
+  margin-left:20px;
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
 }
