--- a/albums.css
+++ b/albums.css
@@ -12,73 +12,24 @@ Class - .
 
 /* for styling of buttons */
 .button-grp{
-max-width:100%;
-background-color: gray; 
-}
-.thisbutton {
-  background-color: gray;
-  border: none;
-  color: black;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 15px;
-  width: 19%;
-  cursor: pointer;
-
-}     
+  max-width:100%;
+  background-color: lightgray; 
+  }
+  .thisbutton {
+    background-color: lightgray;
+    border: none;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    width: 19%;
+    cursor: pointer;
+  
+  }   
 button:hover{
   background-color:pink;
-}
-.ticketbutton{
-background-color: none;
-border: 2px;
-color: black;
-padding: 20px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 18px;
-width: 19%;
-cursor: pointer;
-}
-.menubtn {
-background-color: #04AA6D;
-color: white;
-padding: 10px;
-font-size: 16px;
-border: none;
-width:100px;
-float: left;
-}
-
-.menudown {
-position: relative;
-display: inline-block;
-}
-
-.menu-content {
-display: none;
-position: absolute;
-background-color: #f1f1f1;
-min-width: 160px;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-z-index: 1;
-}
-
-.menu-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
-}
-@media (max-width: 920px) {
-.menu-content a:hover {background-color: #ddd;}
-
-.menu:hover .menu-content {display: block;}
-
-.menu:hover .menubtn {background-color: #3e8e41;}
 }
 /* @media (max-width: 920px) {
   .flex-item {
@@ -118,4 +69,28 @@ font-family: 'Inconsolata', monospace;
   margin-left:20px;
   font-size: 20px;
   font-family: 'Inconsolata', monospace;
+}
+.albumsproperties:link{
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
+}
+a:link {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: rgb(255, 133, 153);
+  background-color: transparent;
+  text-decoration: none;
+}
+a:active {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
 }
