--- a/about.css
+++ b/about.css
@@ -110,6 +110,7 @@ border: 2px solid orange;
   font-family: 'Inconsolata', monospace;
 
 }
+
 .socialmedia{
   font-size: 15px;
   height:30px;
@@ -119,8 +120,13 @@ border: 2px solid orange;
 }
 
 .sm{
-  text-align: left;
+  text-align: center;
   margin-left:20px;
   font-size: 20px;
   font-family: 'Inconsolata', monospace;
+}
+.socialmedia1{
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
 }
