--- a/index.css
+++ b/index.css
@@ -125,8 +125,12 @@ button:hover{
 }
 
 .sm{
-  text-align: left;
+  text-align: center;
   margin-left:20px;
   font-size: 20px;
   font-family: 'Inconsolata', monospace;
+}
+.socialmedia1{
+  display: flex;
+  justify-content: center;
 }
