--- a/ticket.css
+++ b/ticket.css
@@ -163,3 +163,32 @@ padding:10px;
   font-size: 20px;
   font-family: 'Inconsolata', monospace;
 }
+
+.socialmedia{
+  font-size: 15px;
+  height:30px;
+  width:auto;
+  margin:20px;
+  display:inline;
+}
+
+.sm{
+  text-align: center;
+  margin-left:20px;
+  font-size: 20px;
+  font-family: 'Inconsolata', monospace;
+}
+.socialmedia1{
+  display: flex;
+  justify-content: center;
+}
+
+.nye{
+  display: block;
+  width: auto;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:20px;
+  border: 2px solid orange;
+}
